<resources>
    <string name="app_name">MyBeats</string>
    <string name="meu_beats">Meu Beats</string>
    <string name="especializa">Especializados em fones para deejay</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="ainda_nao_e_cadastrado">Ainda não é cadastrado?</string>
    <string name="inscreva_se">Inscreva-se</string>
    <string name="adicionar">Adicionar</string>
    <string name="pergunta">\?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="captacao">Captação</string>
    <string name="altura">altura</string>
    <string name="autonomia">Autonomia</string>
    <string name="alimentacao">Alimentação</string>
    <string name="compatibilidade">Compatibilidade</string>
    <string name="conexao">Conexão</string>
    <string name="descricao">Descrição</string>
    <string name="comprar">Comprar</string>
</resources>